--- a/style.css
+++ b/style.css
@@ -1,20 +1,92 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .text{
   font-family: Arial, Helvetica, sans-serif;
-
+font-size: 17px;
   color: #926239;
 }
-.header{
+.size{
   font-size: 50px;
-  line-height: 1.2;
-  
-font-weight: bold;
+  line-height: 1,6;
+  font-weight: bold;
+  padding: 0 20 0 20;
 }
-.background-img{
+.header{
+  width: 722px;
+  height: 636px;
+  box-sizing: border-box;
+  font-size: 50px;
+  line-height: 1,2;
+  display: block;
+  background-position: top;
+  background-size: cover;
+  background-position-x: 50%;
+  background-position-y: 50%;
+  text-align: center;
+  margin: 0;
+
+
+}
+.background{
   background-image: url(./beach.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   min-width: 100%;
   min-height: 100%;
-  
+
+}
+body{
+  width: 722px;
+  height: 1436px;
+}
+.section-a{
+  background-color: #926239;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  margin: 0;
+  display: block;
+}
+.section-b{
+  background-color: #f4f4f4;
+  text-align: center;
+  padding: 20px;
+  margin: 0;
+  display: block;
+}
+.section-c{
+display: inline-block;
+}
+.article-1{
+  background-color: #926239;
+  color: #fff;
+  padding: 20;
+  display: inline-block;
+ 
+}
+.article-2{
+background-color: #f9f9f9;
+padding: 20px;
+display: inline-block;
+
+}
+.article-3{
+  background-color: #926239;
+  color: #fff;
+  padding: 20;
+  display: inline-block;
+ 
+}
+.box-left{
+  object-position: left;
+}
+.box-center{
+  object-position: center;
+}
+.box-right{
+  object-position: right;
 }
