--- a/style.css
+++ b/style.css
@@ -2,7 +2,29 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
 }
+
+body{
+  width: 100%;
+  height: 100%;
+  line-height: 1.6;
+}
+
+.button{
+  text-align: center;
+  padding: 10px 20px;
+  font-size: 18px;
+  border-radius: 10px;
+  border: #926239 1px solid;
+}
+
+.description{
+  font-family: Arial, Helvetica, sans-serif;
+font-size: 20px;
+  color: #926239;
+}
+
 .text{
   font-family: Arial, Helvetica, sans-serif;
 font-size: 17px;
@@ -12,23 +34,20 @@ font-size: 17px;
   font-size: 50px;
   line-height: 1,6;
   font-weight: bold;
-  padding: 0 20 0 20;
+  padding: 0px 20px 0px 20px;
 }
 .header{
-  width: 722px;
+  /* width: 722px; */
   height: 636px;
   box-sizing: border-box;
   font-size: 50px;
   line-height: 1,2;
   display: block;
-  background-position: top;
+  margin-left: auto;
+  margin-right: auto;
   background-size: cover;
-  background-position-x: 50%;
-  background-position-y: 50%;
   text-align: center;
-  margin: 0;
-
-
+  padding-top: 100px;
 }
 .background{
   background-image: url(./beach.jpg);
@@ -37,56 +56,48 @@ font-size: 17px;
   background-position: center;
   min-width: 100%;
   min-height: 100%;
+}
 
-}
-body{
-  width: 722px;
-  height: 1436px;
-}
 .section-a{
   background-color: #926239;
   color: #fff;
   text-align: center;
   padding: 20px;
-  margin: 0;
+
   display: block;
+  width: 100%;
 }
 .section-b{
   background-color: #f4f4f4;
   text-align: center;
   padding: 20px;
-  margin: 0;
   display: block;
+  width: 100%;
 }
 .section-c{
-display: inline-block;
-}
-.article-1{
-  background-color: #926239;
-  color: #fff;
-  padding: 20;
-  display: inline-block;
- 
-}
-.article-2{
-background-color: #f9f9f9;
-padding: 20px;
-display: inline-block;
+display: block;
+width: 100%;
 
 }
-.article-3{
+.box-1{
+  display: inline-block;
   background-color: #926239;
   color: #fff;
-  padding: 20;
+  width: 33%;
+  text-align: center;
+  
+}
+
+.box-2{
   display: inline-block;
- 
+  width: 33%;
+  text-align: center;
 }
-.box-left{
-  object-position: left;
-}
-.box-center{
-  object-position: center;
-}
-.box-right{
-  object-position: right;
+
+.box-3{
+  display: inline-block;
+  background-color: #926239;
+  color: #fff;
+  width: 33%;
+  text-align: center;
 }
