--- a/style.css
+++ b/style.css
@@ -5,13 +5,64 @@
   
 }
 
+:root{
+  font-size: 18px;
+}
+
 body{
-  width: 100%;
-  height: 100%;
+  font-size: 1.2em;
+  color: #926239;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
 }
 
-.button{
+.header{
+  width: 100vw;
+  height: 100vh;
+  line-height: 1.6;
+  background-image: url(./beach.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header > :first-child{
+font-size: 50px;
+
+
+}
+
+.header > :nth-child(2){
+
+}
+
+.container{
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center; */
+  font-size: 1em;
+}
+
+.btn{
+  text-align: center;
+  padding: 10px 20px;
+  font-size: 1em;
+  border-radius: 10px;
+  border: #926239 1px solid;
+  color: #926239;
+  margin-top: 20px;
+
+}
+
+
+
+
+
+/* .button{
   text-align: center;
   padding: 10px 20px;
   font-size: 18px;
@@ -36,19 +87,20 @@ font-size: 17px;
   font-weight: bold;
   padding: 0px 20px 0px 20px;
 }
+
 .header{
-  /* width: 722px; */
   height: 636px;
   box-sizing: border-box;
   font-size: 50px;
   line-height: 1,2;
-  display: block;
+  display: border;
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
   text-align: center;
   padding-top: 100px;
 }
+
 .background{
   background-image: url(./beach.jpg);
   background-repeat: no-repeat;
@@ -63,10 +115,10 @@ font-size: 17px;
   color: #fff;
   text-align: center;
   padding: 20px;
-
-  display: block;
+  display: block; 
   width: 100%;
 }
+
 .section-b{
   background-color: #f4f4f4;
   text-align: center;
@@ -74,18 +126,18 @@ font-size: 17px;
   display: block;
   width: 100%;
 }
+
 .section-c{
 display: block;
 width: 100%;
-
 }
+
 .box-1{
   display: inline-block;
   background-color: #926239;
   color: #fff;
   width: 33%;
   text-align: center;
-  
 }
 
 .box-2{
@@ -100,4 +152,4 @@ width: 100%;
   color: #fff;
   width: 33%;
   text-align: center;
-}
+} */
