--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@
 }
 
 body{
+  display: flex;
+  flex-direction: column;
   font-size: 1.2em;
   color: #926239;
   font-family: Arial, Helvetica, sans-serif;
@@ -67,3 +69,13 @@ font-size: 50px;
   flex-direction: row;
 }
 
+@media screen and (max-width: 376px){
+  .header{
+    flex-basis: 80%;
+    text-align: center;
+  }
+  .section-c{
+    flex-direction: column;
+
+}
+}
